change the location

--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
 
   <meta
     name="description"
-    content="Connect with Talk with Sian for remote EFT therapy and professional counselling in Chester & Flintshire. Talk with a therapist today for personalised support."
+    content="Connect with Talk with Sian for remote EFT therapy and professional counselling in Chester & Flintshire. In-person therapy sessions available in Penyffordd."
     />
   <meta
     name="keywords"
-    content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT Therapy, Counselling Chester, Chester, Flintshire"
+    content="Therapy Chester, Penyffordd Therapist, In-person Therapy Penyffordd, Professional Therapist, EFT Therapy, Counselling Chester, Flintshire"
     />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
@@ -136,13 +136,22 @@
     <div class="contact-hero-section my-5 py-5 px-3 mb-4">
       <h1>Talk with a Professional Therapist</h1>
       <p class="lead p-md-3 text-white">
-        I provide <strong>online and in-person EFT therapy</strong> and compassionate counselling for women in Chester &amp; Flintshire.
-    Book your preferred session type today or reach out with any questions.
+           I provide <strong>online sessions and in-person EFT therapy in Penyffordd</strong>, with compassionate counselling for women across Chester &amp; Flintshire.
+        Book your preferred session type today or reach out with any questions.
       </p>
       <a href="services.html" class="btn btn-primary">
         Book Your Session – Talk with a Therapist
       </a>
           </div>
+
+           <div class="bg-light p-4 rounded shadow-sm mb-4 text-center">
+<h2><i class="bi bi-geo-alt-fill me-2" style="color: purple;"></i>In-Person Therapy Location</h2>
+      <p class="mb-0">
+        I welcome you for private, one-to-one sessions at my <strong>Penyffordd, Flintshire</strong> therapy space.<br>
+        Exact address is shared upon booking for your privacy and safety.
+      </p>
+    </div>
+
 
     <div class="contact-form-section p-4 mb-4">
       <h2 class="text-center mb-3">Reach Out for Online or In-person Session Enquiries</h2>
@@ -187,12 +196,7 @@
           </button>              
         </div>
       </form>
-      <div class="text-center mt-4">
-  <p class="mb-1"><strong>In-person Location:</strong></p>
-  <p class="mb-0">Penyffordd, Flintshire</p>
-
-</div>
-
+    
       <p id="formResponse" style="text-align:center; margin-top:20px;"></p>
     </div>
 
