--- a/eft-therapy.html
+++ b/eft-therapy.html
@@ -11,11 +11,11 @@
   <!-- SEO Meta Tags -->
   <meta
     name="description"
-    content="Discover Therapy Chester with our expert EFT Tapping Therapy sessions. Talk with a professional therapist at Talk with Sian to overcome anxiety, trauma, and stress in Chester & Flintshire."
+  content="Discover Therapy Chester with expert EFT Tapping Therapy sessions, available online or in-person in Penyffordd. Talk with a professional therapist at Talk with Sian to overcome anxiety, trauma, and stress in Chester & Flintshire."
     />
   <meta
     name="keywords"
-    content="Therapy Chester, EFT Tapping Therapy, EFT Therapy, Professional Therapist, Talk with a Therapist, Counselling Chester, Chester, Flintshire"
+  content="Therapy Chester, Penyffordd Therapy, Online Therapy, In-person Therapy Penyffordd, EFT Tapping, Counselling Chester, Flintshire"
     />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
@@ -450,9 +450,11 @@
   <div class="container content-container flex-grow-1 pt-5 mt-5">
     <!-- Hero Section -->
     <div class="hero-section d-flex-column justify-content-center align-items-center">
-      <h1>EFT Tapping Therapy in Chester</h1>
+      <h1>EFT Tapping Therapy – Online & In-Person in Penyffordd, Chester</h1>
       <p>
         Transform anxiety, stress, and emotional blocks with our expert EFT Tapping Therapy. 
+    Choose a convenient <strong>online session</strong> or join us 
+    <strong>in-person at our private Penyffordd location</strong>.
       </p>
       <a class="gradient-button mt-4" href="contact.html">Book Your Session</a>
       
@@ -531,8 +533,12 @@
     <div class="row mb-5 align-items-center m-2">
       <h2 class="section-title">Your EFT Session</h2>
       <div class="col-md-6 ">
+        <p class="session-badge text-center mb-3">
+  🌍 Available Online & 📍 In-Person in Penyffordd
+</p>
+
         <p>
-          Each session is customized for you. We begin by identifying the core
+          Each session is customised for you. We begin by identifying the core
           issue or emotion you’d like to address, then guide you through tapping
           sequences. There’s no rigid formula—your personal comfort and progress
           shape the experience.  
@@ -542,6 +548,7 @@
           appointment in Chester or a virtual session, you’ll receive the same
           level of empathic, knowledgeable support.
         </p>
+        
         <a class="gradient-button mt-3" href="contact.html">Schedule Your Session</a>
       </div>
       <div class="col-md-6">
