--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Updated Title & Meta for Improved SEO -->
-    <title>Therapy Chester – Professional Therapist, EFT Therapy & Counselling in Chester & Flintshire</title>
+    <title>Therapy Chester – Professional Therapist, EFT Therapy & Counselling in Penyfordd, Chester & Flintshire</title>
     <meta
   name="description"
-  content="Looking for therapy in Chester? Talk with a professional therapist offering EFT therapy and confidential counselling services in Chester & Flintshire. Book your consultation today."
+  content="Therapy in Chester and Flintshire with online sessions and in-person therapy in Penyffordd. Work with a professional therapist for EFT therapy and confidential counselling."
 />
 
 <meta
 name="keywords"
-content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT Therapy, Counselling Chester, Chester, Flintshire"
+  content="Therapy Chester, Penyffordd therapy, Online therapy, In-person therapy Penyffordd, EFT Therapy, Counselling Chester, Flintshire"
 />
 
     <meta name="robots" content="index, follow" />
@@ -29,10 +29,8 @@ content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT The
     content="Therapy Chester – Professional Therapist, EFT Therapy & Counselling in Chester & Flintshire"
   />
   
-  <meta
-  property="og:description"
-  content="Looking for therapy in Chester? Talk with a professional therapist for EFT therapy and tailored counselling services in Chester & Flintshire. Book your session today."
-/>
+  <meta property="og:description" content="Online sessions and in-person therapy in Penyffordd. Work with a professional therapist for EFT therapy and confidential counselling across Chester and Flintshire."/>
+
 
     <meta property="og:url" content="https://talkwithsian.com/" />
     <meta
@@ -49,10 +47,8 @@ content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT The
   content="Therapy Chester – Professional Therapist, EFT Therapy & Counselling in Chester & Flintshire"
 />
 
-<meta
-name="twitter:description"
-content="Seeking therapy in Chester? Talk with a professional therapist providing EFT therapy and confidential counselling services in Chester & Flintshire. Contact us today."
-/>
+<meta name="twitter:description" content="Online sessions and in-person therapy in Penyffordd. Professional EFT therapy and confidential counselling across Chester and Flintshire."/>
+
 
     <meta
       name="twitter:image"
@@ -254,14 +250,16 @@ content="Seeking therapy in Chester? Talk with a professional therapist providin
 
       <!-- Hero Section -->
       <div class="hero-section my-4">
-        <h1>Professional Therapy in Chester</h1>
-        <p class="lead text-white">
-          Confidential EFT therapy and tailored counselling services for women in Chester & Flintshire. 
-        </p>
-        <a class="btn btn-primary btn-lg my-5" href="contact.html" role="button">
-          Book Your Consultation with a Professional Therapist
-        </a>
-      </div>
+  <h1>Therapy in Chester, Online or In-Person in Penyffordd</h1>
+  <p class="lead text-white">
+    Confidential EFT therapy and tailored counselling for women across Chester and Flintshire.
+    Choose a convenient <strong>online session</strong> or visit <strong>our private space in Penyffordd</strong>.
+  </p>
+  <a class="btn btn-primary btn-lg my-5" href="contact.html" role="button">
+    Book Your Consultation
+  </a>
+</div>
+
 
 <!-- In-person Therapy Section -->
 <section class="inperson-section py-5 my-5">
