--- a/person-centred-therapy.html
+++ b/person-centred-therapy.html
@@ -3,17 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Person Centred Therapy in Therapy Chester – Empathetic, Remote Sessions in Chester & Flintshire | Talk with Sian</title>
+<title>Person Centred Therapy in Chester – Online and In-Person in Penyffordd, Chester | Talk with Sian</title>
+<meta name="description" content="Person Centred Therapy in Chester and Flintshire with online sessions and in-person therapy in Penyffordd. Empathetic support for anxiety, low mood, and stress with a professional therapist."/>
+<meta name="keywords" content="Person Centred Therapy, Penyffordd therapy, Online therapy, In-person therapy Penyffordd, Therapy Chester, Counselling Flintshire"/>
 
-  <!-- Primary SEO Meta Tags -->
-  <meta
-    name="description"
-    content="Experience transformative Person Centred Therapy in Therapy Chester. Talk with Sian offers empathetic, remote sessions for depression, anxiety, and stress across Chester & Flintshire. Talk with a therapist who cares."
-    />
-  <meta
-    name="keywords"
-    content="Person Centred Therapy, Therapy Chester, Professional Therapy, Talk with a Therapist, Mental Health Support, Chester Therapy, Therapy Services Flintshire"
-    />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
@@ -22,7 +15,7 @@
   <meta name="ICBM" content="53.1905, -2.8919" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Person Centred Therapy in Therapy Chester – Remote, Empathetic Sessions" />
+  <meta property="og:title" content="Person Centred Therapy in Therapy Chester – Remote and In-person Empathetic Sessions" />
   <meta property="og:description" content="Transform your life with empathetic Person Centred Therapy in Therapy Chester. Talk with a therapist and access remote sessions across Chester & Flintshire for depression, anxiety, and stress support." />
   <meta property="og:url" content="https://www.talkwithsian.com/person-centred-therapy" />
   <meta property="og:type" content="website" />
@@ -373,6 +366,8 @@
       </p>
     </div>
 
+    
+
     <!-- WHAT IS PERSON CENTRED THERAPY -->
     <div class="row align-items-center g-5 mb-5">
       <div class="col-md-6">
@@ -432,6 +427,8 @@
       </div>
       <div class="col-lg-6">
         <h2>How Sessions Work</h2>
+        <p class="session-badge mb-3">🌍 Online sessions • 📍 In-person in Penyffordd</p>
+
         <p>
           In Person Centred Therapy, I offer empathy, congruence, and unconditional positive regard 
           while you share your experiences. This supportive atmosphere helps you tap into your 
@@ -460,6 +457,10 @@
           Remote therapy means no more geographical barriers—if you’re in Chester, Flintshire, or beyond, 
           Person Centred Therapy support is just a click away.
         </p>
+        <p class="mt-2">
+  Prefer to meet face to face? Book our <strong>in-person sessions in Penyffordd</strong>.
+</p>
+
       </div>
       <div class="col-md-6">
         <img
@@ -487,6 +488,7 @@
       </div>
     </div>
   </div><!-- END content-container -->
+  
 
    <!-- ======== FOOTER ======== -->
     <footer class="footer mt-auto">
