--- a/services.html
+++ b/services.html
@@ -3,20 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Therapy Chester – EFT Therapy, Counselling &amp; Professional Support | Talk with Sian</title>
+    <title>Therapy Chester – Online and In-Person Therapy in Penyffordd | EFT, Trauma & Person-Centred</title>
+<meta name="description" content="Therapy in Chester and Flintshire with online sessions and in-person therapy in Penyffordd. Bespoke EFT, trauma counselling, and person-centred support with a professional therapist."/>
+<meta name="keywords" content="Therapy Chester, Penyffordd therapy, Online therapy, In-person therapy Penyffordd, EFT Therapy, Counselling Chester, Trauma Therapy, Person Centred Therapy"/>
+
 
     <!-- Favicon -->
     <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
 
     <!-- SEO Meta Tags -->
-    <meta
-      name="description"
-      content="Discover Therapy Chester with bespoke EFT Therapy, trauma counselling, and person-centred support. Talk with a professional therapist for tailored therapy and counselling in Chester &amp; Flintshire."
-      />
-    <meta
-      name="keywords"
-      content="Therapy Chester, Professional Therapist, Talk with a Therapist, EFT Therapy, Counselling Chester, Trauma Therapy, Person Centred Therapy, Chester, Flintshire"
-      />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Talk with Sian" />
     <meta name="geo.region" content="GB" />
@@ -29,10 +24,8 @@
       property="og:title"
       content="My Services | Therapy Chester – EFT Therapy, Counselling & Professional Support"
       />
-    <meta
-      property="og:description"
-      content="Offering bespoke EFT Therapy, trauma counselling, and person-centred therapy in Chester &amp; Flintshire. Talk with a therapist for professional and compassionate support."
-      />
+    <meta property="og:description" content="Online sessions and in-person therapy in Penyffordd. Bespoke EFT, trauma counselling, and person-centred support across Chester and Flintshire."/>
+
     <meta property="og:url" content="https://www.talkwithsian.com/services" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
@@ -43,10 +36,8 @@
       name="twitter:title"
       content="My Services | Therapy Chester – EFT Therapy, Counselling & Professional Support"
       />
-    <meta
-      name="twitter:description"
-      content="Discover bespoke EFT Therapy, trauma counselling, and person-centred therapy in Chester &amp; Flintshire. Talk with a therapist for professional support tailored to your needs."
-      />
+    <meta name="twitter:description" content="Online sessions and in-person therapy in Penyffordd. Bespoke EFT, trauma counselling, and person-centred support across Chester and Flintshire."/>
+
     <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
     <link rel="canonical" href="https://talkwithsian.com/services/" />
 
@@ -261,6 +252,18 @@
         font-weight: 300;
       }
 
+      .session-badge{
+  display:inline-block;background:linear-gradient(45deg,#9370DB,#856798);
+  color:#fff;font-weight:600;padding:.5rem .8rem;border-radius:6px;
+  box-shadow:0 2px 4px rgba(0,0,0,.2)
+}
+.info-card{
+  background-color:#f8f6ff;border:1px solid #e6e0f3;border-radius:12px;
+  padding:1.25rem 1.5rem;box-shadow:0 4px 8px rgba(0,0,0,.05);
+  text-align:center;margin:0 auto 1.25rem
+}
+
+
       /* ===================== FOOTER ===================== */
       .footer {
         background: linear-gradient(45deg, #96c, #856798);
@@ -382,12 +385,14 @@
       
       <!-- Hero Section -->
       <div class="services-hero-section py-5 px-3 my-5" id="discovery-call">
-        <h1>Expert EFT Therapy &amp; Counselling in Chester</h1>
-        <p class="lead">
-          I offer tailored EFT Therapy, trauma counselling, and person-centred therapy services.
-        </p>
-        <a href="#schedule" class="btn-sian btn-sian-lg">Talk with a Therapist Today</a>
-      </div>
+  <h1>Therapy in Chester – Online and In-Person in Penyffordd</h1>
+  <p class="lead">
+    I offer tailored EFT Therapy, trauma counselling, and person-centred therapy.
+    Choose a convenient <strong>online session</strong> or visit my <strong>private space in Penyffordd</strong>.
+  </p>
+  <a href="#schedule" class="btn-sian btn-sian-lg">Talk with a Therapist Today</a>
+</div>
+
 
       <div class="intro-paragraph my-4 text-center">
         <p>
@@ -402,7 +407,7 @@
         <p><strong>Initial Consultation:</strong> Free</p>
         <p><strong>50-Minute Session:</strong> £50</p>
         <p>
-          All my services are delivered online and in-person, offering confidential and professional therapy support from a trusted therapist, right from the comfort of your home in Chester &amp; Flintshire.
+  Sessions are available <strong>online</strong> and <strong>in person in Penyffordd</strong>, offering confidential and professional support across Chester and Flintshire.
         </p>
       </div>
       
