--- a/trauma-therapy.html
+++ b/trauma-therapy.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Chester & Flintshire | Talk with Sian</title>
+  <title>Trauma Therapy in Chester — Online and In-Person in Penyffordd, Chester and Flintshire | Talk with Sian</title>
+<meta name="description" content="Trauma therapy in Chester and Flintshire with online sessions and in-person support in Penyffordd. Professional counselling for PTSD, domestic abuse, and childhood trauma."/>
+<meta name="keywords" content="Trauma Therapy, Penyffordd therapy, Online therapy, In-person therapy Penyffordd, PTSD counselling, Domestic abuse support, Therapy Chester, Flintshire"/>
+
 
   <!-- SEO Meta Tags -->
-  <meta
-    name="description"
-    content="Heal from past trauma with professional counselling in Therapy Chester. Talk with a therapist at Talk with Sian offers remote trauma therapy for PTSD, domestic abuse, and more in Chester & Flintshire."
-    />
-  <meta
-    name="keywords"
-    content="Therapy Chester, Trauma Therapy, Professional Trauma Counselling, Domestic Abuse Support, PTSD Support, Trauma Therapist, Counselling Chester, Chester, Flintshire"
-    />
+
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
@@ -22,16 +18,16 @@
   <meta name="ICBM" content="53.1905, -2.8919" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Chester & Flintshire" />
-  <meta property="og:description" content="Overcome domestic abuse, PTSD, or childhood trauma with professional trauma therapy. Talk with a therapist at Talk with Sian for remote counselling in Therapy Chester & Flintshire." />
+  <meta property="og:title" content="Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Penyffordd & Flintshire" />
+  <meta property="og:description" content="Overcome domestic abuse, PTSD, or childhood trauma with professional trauma therapy. Talk with a therapist at Talk with Sian for remote and in-person counselling in Therapy Chester & Flintshire." />
   <meta property="og:url" content="https://www.talkwithsian.com/trauma-therapy" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Chester & Flintshire" />
-  <meta name="twitter:description" content="Find healing from trauma with expert counselling. Talk with a therapist at Talk with Sian offers remote trauma therapy in Therapy Chester and across Chester & Flintshire." />
+  <meta name="twitter:title" content="Trauma Therapy in Therapy Chester – Professional Trauma Counselling in Penyffordd & Flintshire" />
+  <meta name="twitter:description" content="Find healing from trauma with expert counselling. Talk with a therapist at Talk with Sian offers remote and in-person trauma therapy in Therapy Chester and across Chester & Flintshire." />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Canonical -->
@@ -346,16 +342,20 @@
   <div class="container content-container flex-grow-1">
     <!-- HERO SECTION -->
     <div class="hero-section">
-      <h1>Trauma Therapy in Chester</h1>
-      <p>
-        Experience professional trauma counselling that helps you heal from past abuse, PTSD, or painful memories.
-      </p>
-          </div>
+  <h1>Trauma Therapy in Penyffordd, Chester</h1>
+  <p>
+    Professional trauma counselling to help you heal from past abuse, PTSD, or painful memories.
+    Choose a convenient <strong>online session</strong> or visit <strong>our private space in Penyffordd</strong>.
+  </p>
+</div>
+
 
     <!-- WHY TRAUMA THERAPY -->
     <div class="row align-items-center g-5 mb-5 py-4">
       <div class="col-md-6">
         <h2>Why Trauma Therapy?</h2>
+        <p class="session-badge">🌍 Online sessions • 📍 In-person in Penyffordd</p>
+
         <p>
           Traumatic events can leave deep emotional imprints, affecting your sense of
           safety, self-worth, and relationships. Whether it’s domestic abuse, an accident,
@@ -426,7 +426,7 @@
     <!-- REMOTE SESSIONS BENEFITS -->
     <div class="row align-items-center g-5 mb-5">
       <div class="col-md-6">
-        <h2>Why Remote Therapy?</h2>
+<h2>Online Sessions and In-Person Support</h2>
         <p>
           Remote sessions can be especially helpful if you’re rebuilding trust
           after domestic abuse, or if anxiety makes leaving home challenging.
@@ -436,6 +436,9 @@
         <p>
           Whether you’re in Chester, or in Flintshire, our secure remote sessions ensure you receive professional trauma counselling wherever you are.
         </p>
+        <p class="mt-2">
+  Prefer to meet face to face? Book our <strong>in-person sessions in Penyffordd</strong>.
+</p>
       </div>
       <div class="col-md-6">
         <img
