changed sian photo

--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
 
     <div class="bio-section" id="bio">
       <div class="bio-card">
-        <img src="images/sian.jpeg" alt="Sian Jones" class="img-fluid" />
+        <img src="images/sian-jones-professional-counsellor.jpg" alt="Sian Jones Professional counsellor in Penyffordd Chester" class="img-fluid" />
         <h3>Sian Jones – Trusted Female Therapist &amp; Professional Counsellor in Chester &amp; Flintshire</h3>
         <p>
           With over 10 years of experience in the field of mental health, I specialise in person centred therapy and mindfulness techniques. I deliver professional counselling services designed to help you achieve balance and fulfilment, establishing myself as one of the best therapists in the region.
