updated gbp link

--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@
       </p>
       <p>
         You can also visit my
-        <a href="https://g.co/kgs/yYnhWh6" target="_blank">Google Business Page</a>
+        <a href="https://share.google/08ZZ7Gc1DWJc1ZR1M" target="_blank">Google Business Page</a>
         for reviews and more information.
       </p>
     </div>
