changed pricing to 55

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,7 +19,7 @@
         margin-bottom: 1rem;
       }
       a {
-        colour: #2d2d2d;
+        color: #2d2d2d;
         text-decoration: underline;
       }
       .content {
