Added gtag and ads tag

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,33 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
+      <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16513767694");
+    </script>
+    <!-- Google Tag Manager Scripts (if required) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D5JECZ0HX4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-D5JECZ0HX4");
+    </script>
   <title>Contact Therapy Chester – Talk with a Professional Therapist for EFT Therapy & Counselling in Chester & Flintshire</title>
   <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
   <link href="css/contact.css" rel="stylesheet" />
