--- a/person-centred-therapy.html
+++ b/person-centred-therapy.html
@@ -3,6 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16513767694");
+    </script>
+    <!-- Google Tag Manager Scripts (if required) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D5JECZ0HX4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-D5JECZ0HX4");
+    </script>
 <title>Person Centred Therapy in Chester – Online and In-Person in Penyffordd, Chester | Talk with Sian</title>
 <meta name="description" content="Person Centred Therapy in Chester and Flintshire with online sessions and in-person therapy in Penyffordd. Empathetic support for anxiety, low mood, and stress with a professional therapist."/>
 <meta name="keywords" content="Person Centred Therapy, Penyffordd therapy, Online therapy, In-person therapy Penyffordd, Therapy Chester, Counselling Flintshire"/>
