--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -3,6 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16513767694");
+    </script>
+    <!-- Google Tag Manager Scripts (if required) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D5JECZ0HX4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-D5JECZ0HX4");
+    </script>
     <title>Cookie Policy | Talk with Sian</title>
     <meta name="description" content="Read our Cookie Policy to understand how Talk with Sian uses cookies and similar technologies to enhance your browsing experience." />
     <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
