--- a/services.html
+++ b/services.html
@@ -3,6 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+        <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16513767694");
+    </script>
+    <!-- Google Tag Manager Scripts (if required) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D5JECZ0HX4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-D5JECZ0HX4");
+    </script>
     <title>Therapy Chester – Online and In-Person Therapy in Penyffordd | EFT, Trauma & Person-Centred</title>
 <meta name="description" content="Therapy in Chester and Flintshire with online sessions and in-person therapy in Penyffordd. Bespoke EFT, trauma counselling, and person-centred support with a professional therapist."/>
 <meta name="keywords" content="Therapy Chester, Penyffordd therapy, Online therapy, In-person therapy Penyffordd, EFT Therapy, Counselling Chester, Trauma Therapy, Person Centred Therapy"/>
@@ -308,15 +336,6 @@ footer.footer {
       }
     </style>
   </head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'AW-16513767694');
-  </script>
   <body class="d-flex flex-column min-vh-100">
     <!-- ======== NAVBAR ======== -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
