--- a/trauma-therapy.html
+++ b/trauma-therapy.html
@@ -3,6 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+      <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-16513767694");
+    </script>
+    <!-- Google Tag Manager Scripts (if required) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-D5JECZ0HX4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-D5JECZ0HX4");
+    </script>
   <title>Trauma Therapy in Chester — Online and In-Person in Penyffordd, Chester and Flintshire | Talk with Sian</title>
 <meta name="description" content="Trauma therapy in Chester and Flintshire with online sessions and in-person support in Penyffordd. Professional counselling for PTSD, domestic abuse, and childhood trauma."/>
 <meta name="keywords" content="Trauma Therapy, Penyffordd therapy, Online therapy, In-person therapy Penyffordd, PTSD counselling, Domestic abuse support, Therapy Chester, Flintshire"/>
