--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,13 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PQT5C939');</script>
+<!-- End Google Tag Manager -->
       <!-- Google tag (gtag.js) -->
     <script
       async
@@ -88,6 +95,10 @@
   <link href="css/custom.css" rel="stylesheet" />
 </head>
 <body class="d-flex flex-column min-vh-100">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PQT5C939"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
